--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -5,6 +5,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       -name: Print Greeting
-        run: echo "Hello"
-      -name: Print Goodbye  
-        run: echo "Done"
+        run: |
+            echo "First output"
+            echo "Second output"
